syntax = "proto3";

import "google/protobuf/empty.proto";

package todoPackage;

service Todo {
    rpc createTodo(NewTodoItem) returns (TodoItem);
    rpc readTodos(google.protobuf.Empty) returns (TodoItems);
    rpc readTodosStream(google.protobuf.Empty) returns (stream TodoItem);
}

message NewTodoItem {
    string text = 1;
}

message TodoItem {
    int32 id = 1;
    string text = 2;
}

message TodoItems {
    repeated TodoItem items = 1;
}
